Fix headline wrapping

--- a/client/src/components/Landing/components/InfoSection/index.css
+++ b/client/src/components/Landing/components/InfoSection/index.css
@@ -9,7 +9,6 @@
 }
 
 .InfoSection h2 {
-    max-width: 477px;
     font-size: 40px;
     font-weight: bold;
     line-height: 49px;
